--- a/app/wwwroot/css/site.css
+++ b/app/wwwroot/css/site.css
@@ -19,5 +19,5 @@ html {
 
 body {
   margin-bottom: 60px;
-  background-color: #BDC3C7;
+  background-color: #cce5ff;
 }
